style.css
html,
body,
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  font-size: 62.5%; /* Normally 100% is 16 px we want the size to be 10px so we do 62.5%  */
}

.gallery-title {
  text-align: center;
  font-size: 6rem;
  padding: 1rem;
  background-color: #f57c00;
  transition: ease-in all 1.5s;
}

.gallery-title:hover {
  transform: scale(1.5);
  color: #757575;
}

.gallery {
  height: 200%;
  font-family: "Indie Flower", cursive;
  flex-wrap: wrap;
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  transition: all 0.3s;
}
img.gallery-pics {
  height: 80%;
  width: 100%;
  border: solid;
}

.card {
  width: 55rem;
  height: 45rem;
  text-align: center;
  box-shadow: 1rem 1rem 1rem #212121;
  border: solid;
  background-color: #ffe0b2;
  transition: all 0.3s;
  margin-top: 50px;
  margin-bottom: 50px;
  animation: size 4s;
}

@keyframes size {
  0% {
    transform: scale(0.1);
  }
  25% {
    transform: scale(0.3);
  }
  50% {
    transform: scale(0.5);
  }
  75% {
    transform: scale(1.5);
  }
  100% {
    transform: scale(1);
  }
}

h2.card-text {
  font-size: 4.5rem;
  color: #212121;
  transition: all 0.3s;
  outline-offset: -0.1rem;
  padding-bottom: 2.5rem;
}
h2.card-text:hover {
  outline: #ff9800 0.5rem solid;
  background-color: #757575;
}
#nigiri {
  border-color: #c8e6c9;
  transition: all 0.3s;
}
#nigiri:hover {
  transform: translate(10%) scale(1.2);
  color: #f44336;
}
#roll {
  border-color: #4caf50;
  transition: all 0.3s;
}
#roll:hover {
  color: #795548;
  transform: scale(1.3);
}
#combo {
  border-color: #388e3c;
  transition: all 0.3s;
}
#combo:hover {
  transform: translate(-10%) scale(1.2);
  color: #bdbdbd;
}
body {
  background-color: #ff9800;
  width: 110%;
}

.animation {
  height: 2rem;
  width: 2rem;
  animation: test 4s infinite;
  animation-delay: -2s;
  position: absolute;
}
@keyframes test {
  0% {
    left: 55%;
    bottom: 25%;
    background-color: #4caf50;
  }
  25% {
    left: 50%;
    bottom: 22%;
    background-color: #c8e6c9;
  }
  50% {
    left: 45%;
    bottom: 20%;
    background-color: #f57c00;
  }
  75% {
    left: 50%;
    bottom: 18%;
    background-color: #212121;
  }
  100% {
    left: 55%;
    bottom: 25%;
    background-color: #757575;
  }
}

@media (max-width: 1366px) {
  body {
    background-color: blue;
  }
  .gallery {
    transform: scale(0.8);
  }
  .card {
  }
  .gallery-title {
    font-size: 50px;
  }
}
@media (max-width: 750px) {
  body {
    background-color: red;
  }
  .gallery {
    transform: scale(0.7);
  }
  .gallery-title {
    font-size: 40px;
  }
  h2.card-text {
    font-size: 3rem;
  }
}

